# hp-data-analysis

./: .gitignore  README.md  hello.py  pyproject.toml  setup.py
examples/: advanced_example.py  benchmark_vs_pandas.py  benchmarks.ipynb  dataframe_example.py  groupby_benchmark.py  optimized_benchmark.py  quick_benchmark.py
hpda/: __init__.py
include/hpda/: dataframe.h
src/: dataframe.cpp  python_bindings.cpp
tests/: test_dataframe.py
