[project]
name = "hp-data-analysis"
version = "0.1.0"
description = "High-performance data analysis and machine learning library with pandas-like API, implemented in C++"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Alejandro Ballesteros"}
]
keywords = ["data-analysis", "dataframe", "high-performance", "machine-learning", "C++"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=1.20.0",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pybind11>=2.6.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=22.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []
